# lattice-doe

./: .gitignore  CHANGELOG.md  DOE-Optimality-Criteria-Explained.md  Dockerfile  Dockerfile.api  ENHANCEMENTS.md  README-Envy.md  README.md  Refactor_Plan.docx  docker-compose.yml  lattice-doe-tickets.md  possible_extension.docx  pyproject.toml  report-share.md  streamlit-frontend.md
.github/workflows/: ci.yml
api_server/: __init__.py  errors.py  jobs.py  main.py  serialization.py
api_server/models/: augment.py  common.py  compare.py  design.py  power_curve.py  sensitivity.py
api_server/routers/: __init__.py  augment.py  compare.py  design.py  jobs.py  power_curve.py  sensitivity.py
app/: app.py  state.py
app/components/: __init__.py  design_config.py  factor_table.py  mr_config.py  power_params.py
app/pages/: 1_Factors.py  2_Power_Config.py  3_Run_Results.py  4_Analysis.py
docs/: quickstart.md  recipes.md  user-guide.md
docs/planning/: ENHANCEMENTS.md  architecture-review.md  design-refactor.md  diagnostics-refactor.md  documentation-review.md  glm-support-ticket-pack.md  multi-response-ticket-pack.md  plotly-charts.md  report-share.md  sheets-integration.md  split-plot-ticket-pack.md  statistics-review.md  streamlit-frontend.md
iopt_power_design/: __init__.py  _request_builder.py  allocation.py  analysis.py  api.py  blocked.py  candidate.py  cli.py  config.py  contrasts.py  design.py  diag_export.py  diag_metrics.py  diagnostics.py  excel_template.py  iopt_search.py  model_matrix.py  plot_backends.py  power.py  power_curves.py  report.py  sheets.py  split_plot.py  utils.py  widgets.py
iopt_power_design/templates/: report_template.html
lattice_doe/: __init__.py  _request_builder.py  allocation.py  analysis.py  api.py  blocked.py  candidate.py  cli.py  config.py  contrasts.py  design.py  diag_export.py  diag_metrics.py  diag_plots.py  excel_template.py  iopt_search.py  model_matrix.py  plot_backends.py  power.py  power_curves.py  progress.py  report.py  sheets.py  split_plot.py  utils.py  widgets.py
lattice_doe/api_server/: __init__.py  errors.py  main.py
lattice_doe/api_server/models/: __init__.py  augment.py  common.py  compare.py  design.py  power_curve.py  sensitivity.py
lattice_doe/api_server/routers/: augment.py  compare.py  design.py  jobs.py  power_curve.py  sensitivity.py
lattice_doe/app/: __init__.py  _launcher.py  app.py  state.py
lattice_doe/app/components/: __init__.py  charts.py  factor_table.py
lattice_doe/app/pages/: 2_Power_Config.py  3_Run_Results.py  4_Analysis.py
lattice_doe/templates/: report_template.html
tests/: test_allocation.py  test_api.py  test_api_server.py  test_app_state.py  test_blocked.py  test_cli.py  test_config.py  test_contrasts.py  test_design.py  test_excel_template.py  test_factor_specs.py  test_jobs.py  test_matrix_wire_format.py  test_plot_backends.py  test_power.py  test_progress.py  test_readme_smoke.py  test_report.py  test_request_builder.py  test_result_contract.py  test_search_bounds.py  test_sheets.py  test_split_plot.py  test_widgets.py
